fdo#76281: Fix wrong square brackets in exported citations

There was a pair of unbalanced ifs in the code to write the opening
and the closing bracket, they should have the same condition.

Change-Id: I9b3e64486d1b87a8df65d351f01eb4cc9a8b8c44